Update gallery card href

--- a/views/admin/layouts/admin.html
+++ b/views/admin/layouts/admin.html
@@ -156,13 +156,13 @@
 								<div class="card">
 									<div class="single-card">
 										<div class="card_image">
-											<a href="/admin-gallery">
+											<a href="/admin/gallery/images">
 												<img src="/static/admin/images/gallery.svg" />
 											</a>
 										</div>
 										<div class="card_title">
 											<p class="text-center">
-												<a href="/admin-gallery">Gallery</a>
+												<a href="/admin/gallery/images">Gallery</a>
 											</p>
 										</div>
 									</div>
