--- a/views/themes/default/components/head.html
+++ b/views/themes/default/components/head.html
@@ -11,7 +11,7 @@
 
 	<% /* Stylesheets*/ %>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss/build/pure-min.min.css" />
-	<link rel="stylesheet" href="/static/styles/styles.min.css" />
+	<link rel="stylesheet" href="/static/styles/default-styles.min.css" />
 	<% if (it.mdRoute) { %>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.8.0/styles/atom-one-dark.min.css" />
 	<% } %>
