Add function to handle external links

--- a/views/themes/default/components/footer.html
+++ b/views/themes/default/components/footer.html
@@ -18,4 +18,4 @@
 </script>
 <% } %>
 
-<script src="/static/scripts/main.js"></script>
+<script type="module" src="/static/scripts/handle-external-links.js"></script>
