Replace main.js by default-scripts.js

--- a/views/themes/default/components/footer.html
+++ b/views/themes/default/components/footer.html
@@ -19,3 +19,4 @@
 <% } %>
 
 <script type="module" src="/static/scripts/handle-external-links.js"></script>
+<script type="module" src="/static/scripts/default-scripts.js"></script>
