--- a/views/themes/default/layouts/base.html
+++ b/views/themes/default/layouts/base.html
@@ -35,7 +35,7 @@
 					<!-- ERROR ROUTE -->
 					*/%> <% if (it.errorRoute) { %>
 					<!-- Start error route content -->
-					<img class="pure-img-responsive" src="<%= it.imageSrc %>" alt="<%= it.imageAlt %>" />
+					<img src="<%= it.imageSrc %>" alt="<%= it.imageAlt %>" />
 					<%~ include('../components/backToHome.html') %>
 					<!-- End error route content -->
 					<% } %>
