Load libraries in default theme from vendors folder instead of CDN

--- a/views/themes/default/components/footer.html
+++ b/views/themes/default/components/footer.html
@@ -11,12 +11,10 @@
 <% } %> <%/*
 <!-- Comment added for readability -->
 */%> <% if (it.mdRoute) { %>
-<script type="module">
-	import hljs from "https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/es/highlight.min.js"
-
+<script src="/static/vendors/highlight/highlight.min.js"></script>
+<script>
 	hljs.highlightAll()
 </script>
 <% } %>
 
-<script type="module" src="/static/scripts/handle-external-links.js"></script>
 <script type="module" src="/static/scripts/themes/default/default-scripts.js"></script>
