--- a/views/themes/default/components/head.html
+++ b/views/themes/default/components/head.html
@@ -5,14 +5,14 @@
 	<meta name="description" content="<%= it.data.description %>" />
 
 	<% /* Favicon */ %>
-	<link rel="shortcut icon" href="<%= it.data.favicon %>" type="image/x-icon" />
+	<link rel="shortcut icon" href="<%= it.data.favicon %>" type="image/svg+xml" />
 	<% /* Title */ %>
 	<title><%= it.siteTitle %> | <%= it.data.title %></title>
 
 	<% /* Stylesheets*/ %>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss/build/pure-min.min.css" />
+	<link rel="stylesheet" href="/static/vendors/themes/default/purecss/pure-min.min.css" />
 	<link rel="stylesheet" href="/static/styles/themes/default/default-styles.min.css" />
 	<% if (it.mdRoute) { %>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.8.0/styles/atom-one-dark.min.css" />
+	<link rel="stylesheet" href="/static/vendors/highlight/atom-one-dark.min.css" />
 	<% } %>
 </head>
