--- a/views/themes/default/components/menu.html
+++ b/views/themes/default/components/menu.html
@@ -55,7 +55,7 @@
 	</style>
 	<div class="pure-menu edit-div">
 		<li class="pure-menu-item">
-			<a href="/admin-update/<%= it.filename %>" class="pure-menu-link edit-link">
+			<a href="/bd-admin/edit/<%= it.editLink %>" class="pure-menu-link edit-link">
 				EDIT
 				<span>&#9998;</span>
 			</a>
