--- a/views/themes/clean-blog/layouts/markdown-files-template.html
+++ b/views/themes/clean-blog/layouts/markdown-files-template.html
@@ -1,9 +1,9 @@
-<% if (!it.data.date) { %>
+<% if (!it.data.publish_date) { %>
 <main id="main" class="mb-4">
 	<div class="container px-4 px-lg-5">
 		<div class="row gx-4 gx-lg-5 justify-content-center">
 			<% if (it.editable) { %>
-			<a href="/admin-update/<%= it.filename %>" class="text-center">
+			<a href="/bd-admin/edit/<%= it.editLink %>" class="text-center">
 				<button class="btn btn-warning">
 					<i class="fa fa-edit"></i>
 					Edit
@@ -19,7 +19,7 @@
 	<div class="container px-4 px-lg-5">
 		<div class="row gx-4 gx-lg-5 justify-content-center">
 			<% if (it.editable) { %>
-			<a href="/admin-update/<%= it.filename %>" class="text-center">
+			<a href="/bd-admin/edit/<%= it.editLink %>" class="text-center">
 				<button class="btn btn-warning">
 					<i class="fa fa-edit"></i>
 					Edit
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<!--Start posts pagination-->
-	<%~ include('../components/postsPagination.html', it.prevNext) %>
+	<%~ include('../components/postsPagination.html', it) %>
 	<!--End posts pagination-->
 	<% } %>
 </article>
