--- a/views/themes/clean-blog/components/pagination.html
+++ b/views/themes/clean-blog/components/pagination.html
@@ -1,22 +1,23 @@
-<%/*
 <!-- First page pagination -->
-*/%> <% if (it.firstPage && it.lastPage > 0) { %>
+{{#if firstPage && lastPage > 0}}
 <div class="d-flex justify-content-end mb-4">
-	<a class="btn btn-primary text-uppercase" href="/page/1">← Older Posts</a>
+	<a class="btn btn-info text-uppercase" href="/page/1">← Older Posts</a>
 </div>
-<% } %> <%/*
+{{/if}}
+
 <!-- Other pages pagination -->
-*/%> <% if (!it.firstPage) { %>
+{{#not firstPage}}
 <div class="d-flex justify-content-between mb-4">
 	<!-- Older Posts -->
-	<% if (it.paginatedPostsList.next_page) { %>
-	<a class="btn btn-primary text-uppercase" href="/page/<%=it.paginatedPostsList.next_page%>">← Older Posts</a>
-	<% } %>
+	{{#if paginatedPostsList.next_page}}
+	<a class="btn btn-info text-uppercase" href="/page/{{paginatedPostsList.next_page}}">← Older Posts</a>
+	{{/if}}
+
 	<!-- Newer Posts -->
-	<% if (it.paginatedPostsList.prev_page) { %>
-	<a class="btn btn-primary text-uppercase" href="/page/<%=it.paginatedPostsList.prev_page%>">Newer Posts →</a>
-	<% } else { %>
-	<a class="btn btn-primary text-uppercase" href="/">Newer Posts →</a>
-	<% } %>
+	{{#if paginatedPostsList.prev_page}}
+	<a class="btn btn-info text-uppercase" href="/page/{{paginatedPostsList.prev_page}}">Newer Posts →</a>
+	{{#else}}
+	<a class="btn btn-info text-uppercase" href="/">Newer Posts →</a>
+	{{/if}}
 </div>
-<% } %>
+{{/not}}
