--- a/views/themes/clean-blog/components/back-to-home.html
+++ b/views/themes/clean-blog/components/back-to-home.html
@@ -1,4 +1,4 @@
-<%/* Back to home link for error pages */%>
+<!--Back to home link for error pages-->
 <div class="text-center m-3">
-	<a href="/" class="btn btn-primary btn-lg">TAKE ME BACK HOME!</a>
+	<a href="/" class="btn btn-info btn-lg">TAKE ME BACK HOME!</a>
 </div>
