--- a/views/themes/clean-blog/components/postsPagination.html
+++ b/views/themes/clean-blog/components/postsPagination.html
@@ -1,20 +1,25 @@
 <div class="d-flex justify-content-center mb-4">
-	<% if (it.prevPost !== null) { %>
+	{{#if prevPost !== null}}
 	<a
-		class="btn btn-primary text-uppercase m-1"
-		href="/posts/<%=it.prevPost.fileBaseName%>"
+		class="btn btn-info text-uppercase m-1"
+		href="/posts/{{prevPost.fileBaseName}}"
 		aria-label="Go to the previous post"
 	>
-		<span aria-hidden="true">Previous: <%=it.prevPost.frontmatter.title%></span>
+		<span aria-hidden="true">Previous: {{prevPost.title}}</span>
 		<span class="visually-hidden">Go to the previous post</span>
 	</a>
+	{{/if}}
 
-	<% } %> <%/*
-	<!-- Added comment for readability -->
-	*/%> <% if (it.nextPost !== null) { %>
-	<a class="btn btn-primary text-uppercase m-1" href="/posts/<%=it.nextPost.fileBaseName%>" aria-label="Go to the next post">
-		<span aria-hidden="true">Next: <%=it.nextPost.frontmatter.title%></span>
+	<!--Dynamic Markup Separator-->
+
+	{{#if nextPost !== null}}
+	<a
+		class="btn btn-info text-uppercase m-1"
+		href="/posts/{{nextPost.fileBaseName}}"
+		aria-label="Go to the next post"
+	>
+		<span aria-hidden="true">Next: {{nextPost.title}}</span>
 		<span class="visually-hidden">Go to the next post</span>
 	</a>
-	<% } %>
+	{{/if}}
 </div>
